# tempotui

./: .env.example  .gitignore  .goreleaser.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: config.example.toml
src/: config.rs  http.rs  jira.rs  lib.rs  main.rs  report.rs  storage.rs  tempo.rs
src/tui/: action.rs  input.rs  mod.rs  render.rs  runtime.rs  state.rs  tests.rs  update.rs  view_model.rs
